# rocket-server

./: Cargo.toml  README.md
src/: main.rs
static/: index.html  link_page.html
static/js/: index.js
static/py/: sum.py
