[package]
name = "rocket-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mongodb = { version = "2.1"}
bson = { version = "2", features = ["chrono-0_4"] }
chrono = "0.4" # Used for setting DateTimes
serde = { version = "1.0", features = ["derive"] }
tokio = "1.35.1"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
